# messgen

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  camel_to_snake.py  filter_yaml.py  generate_all.sh  go.mod  go.work  golangci.yaml  messgen-generate.py  proto_gen.py  pyproject.toml  rework_messages.py  rework_v1_messages.py  separate_enums_from_constants.py
.github/actions/node/: action.yml
.github/workflows/: cpp.yml  golang.yml  js.yml
build-golang-test/: go.mod
integrations/cmake/: messgen.cmake
messgen/: common.p  common.py  cpp_generator.py  dart_generator.py  dynamic.py  generator.py  golang_generator.py  json_generator.py  md_generator.py  model.py  ts_generator.py  validation.py  yaml_parser.py
port/cpp/messgen/: Allocator.h  bitset.h  bitset_operators.h  bytes.h  concepts.h  concepts_common.h  decimal.h  format.h  map.h  messgen.h  messgen_common.h  metadata.h  reflection.h  reflection_common.h  span.h  traits.h  util.h
port/cpp_auto_alloc/messgen/: decimal.h  format.h  messgen.h  reflection.h
port/cpp_common/messgen/: decimal.h
port/cpp_custom_alloc/messgen/: Allocator.h  bytes.h  map.h  messgen.h  reflection.h  span.h
port/cpp_nostl/messgen/: Allocator.h  bitset_operators.h  concepts.h  map.h  messgen.h  reflection.h  traits.h  traits_nostl.h  vector.h
port/cpp_stl/messgen/: concepts.h  decimal.h  format.h  messgen.h  reflection.h  traits.h
port/dart/: README.md  pubspec.yaml
port/dart/lib/: messgen.dart
port/dart/lib/src/: buffer.dart  exceptions.dart  interfaces.dart  types.dart
port/go/messgen/: protocol.go
port/golang/: go.mod  interfaces.go
port/golang/messgen/: interfaces.go  types.go
port/js/: .gitignore  package-lock.json  package.json  tsconfig.json
port/js/benchmarks/: struct.bench.ts  utf8-bytelen.bench.ts  v1-vs-old-typedArry.bench.ts  v1-vs-old.bench.ts
port/js/benchmarks/deserialize-variant/: messgen-old.js  utf8.js
port/js/benchmarks/perf-process/: index.ts
port/js/src/: Buffer.ts  Codec.test.ts  Codec.ts  Codec.types.ts  Protocols.test.ts  index.ts  types.ts
port/js/src/converters/: ConverterFactory.test.ts  ConverterFactory.ts
port/js/src/converters/base/: BitsetConverter.test.ts  BitsetConverter.ts  DecimalConverter.test.ts  DecimalConverter.ts  EnumConverter.test.ts  EnumConverter.ts  ExternalConverter.ts  ScalarConverter.test.ts  ScalarConverter.ts  StructConverter.ts  StructConvertert.test.ts  index.ts
port/js/src/error/: Error.utils.ts
port/js/src/protocol/: MessageInfo.ts  Protocols.test.ts  Protocols.ts  Protocols.types.ts  dependency.resolver.ts  index.ts
port/js/src/utils/: hash.test.ts  hash.ts  utf8.test.ts  utf8.ts
port/js/tests/: BitsetConverter.test.ts  Codec.test.ts  DecimalConverter.test.ts  EnumConverter.test.ts  Integration.test.ts  Protocols.test.ts  ScalarConverter.test.ts  StructConvertert.test.ts  protocols.json  protocols.ts  types.json  types.ts
port/js/tests/common/: types.ts
port/js/tests/cross_proto/: index.ts
port/js/tests/fixtures/types/: address_list.yaml  asian_string.yaml
port/js/tests/messgen/test/: index.ts
port/js/tests/mynamespace/proto/subspace/another_proto/: index.ts
port/js/tests/mynamespace/proto/test_proto/: index.ts
port/js/tests/mynamespace/types/: index.ts
port/js/tests/mynamespace/types/subspace/: index.ts
port/js/tests/nested/another_proto/: index.ts
port/js/tests/one_more_message/: index.ts
port/js/tests/test/: types.ts
port/js/tests/test_proto/: index.ts
scripts/: camel_to_snake.py  filter_yaml.py  proto_gen.py  replace_id_lines.py  separate_enums_from_constants.py
tests/: CMakeLists.txt
tests/cpp/: Cpp17AutoAllocTest.cpp  Cpp17CustomAllocTest.cpp  Cpp17NostlTest.cpp  Cpp17StlTest.cpp  Cpp17Test.cpp  Cpp20CustomAllocTest.cpp  Cpp20DecimalTest.cpp  Cpp20NostlTest.cpp  Cpp20Test.cpp  CppDecimalTest.cpp  CppNostlTest.cpp  CppTest.cpp  DecimalTest.cpp
tests/cpp_dynamic/: main.cpp
tests/dart/: pubspec.yaml
tests/dart/test/: bitset_test.dart  complex_struct_test.dart  decode_test.dart  encode_test.dart  protocol_map_test.dart  test_data.dart
tests/data/types/messgen/test/: complex_struct.yaml  complex_struct_nostl.yaml  name_clash_struct.yaml  simple_bitset.yaml  test_bitset.yaml
tests/data/types_decimal/: README.md
tests/data/types_decimal/messgen/test/: flat_struct_with_decimal.yaml
tests/golang/: bitset_test.go  data_test.go  decode_test.go  encode_test.go  go.mod  go.sum  proto_test.go
tests/golang/msgs/: CrossProto.go  OneMoreMessage.go
tests/golang/msgs/messgen/test/: ComplexStruct.go  ComplexStructNostl.go  ComplexStructWithEmpty.go  EmptyStruct.go  FlatStruct.go  SimpleEnum.go  SimpleStruct.go  StructWithEnum.go  VarSizeStruct.go
tests/golang/msgs/proto/: test_proto.go
tests/golang/msgs/proto/nested/: another_proto.go
tests/msg/protocols/mynamespace/proto/: test_proto.yaml
tests/msg/protocols/mynamespace/proto/subspace/: another_proto.yaml
tests/msg/types/mynamespace/type/: struct_with_enum.yaml
tests/msg/types/mynamespace/type/subspace/: complex_struct.yaml  complex_struct_nostl.yaml  complex_struct_with_empty.yaml
tests/msg/types/mynamespace/types/: another_simple_bitset.yaml  complex_types_with_flat_groups.yaml  name_clash_struct.yaml  simple_struct.yaml  struct_with_enum.yaml
tests/msg/types/mynamespace/types/subspace/: complex_struct.yaml  complex_struct_custom_alloc.yaml  complex_struct_with_empty.yaml
tests/msg/types_decimal/mynamespace/types/: flat_struct_with_decimal.yaml
tests/msg/types_invalid/: README.md
tests/python/: generate_serialized_data.py  test_codec.py  test_model.py  test_validation.py
