[project]
name = "messgen"
description = "Cross language serialization cod generator"
dynamic = ["version"]
authors = [
    {name = "Anton Babushkin", email = "anton.babushkin@alberblanc.com"},
    {name = "Adam Lach", email = "adam.lach@alberblanc.com"},
    {name = "Philipp Andronov", email = "philip.andronov@alberblanc.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyyaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["messgen"]
exclude = []

[tool.pylint.master]
disable = ["C0114", "C0115", "C0116"]

[tool.pylint.format]
max-line-length = 150

[tool.pytest.ini_options]
testpaths = ["tests/python"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "- [%(asctime)s] - [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%H:%M:%S"
pythonpath = ["messgen"]

[tool.mypy]
mypy_path = ["tests/python"]
ignore_missing_imports = true
explicit_package_bases = true

[tool.ruff]
line-length = 150

