include(GoogleTest)
find_package(GTest REQUIRED)

set(MESSGEN_TYPE_DIR "${CMAKE_CURRENT_LIST_DIR}/msg/types")
set(MESSGEN_PROTO_DIR "${CMAKE_CURRENT_LIST_DIR}/msg/protocols")

if(CMAKE_CXX_STANDARD GREATER_EQUAL 20)
    add_executable(test_cpp20 "cpp/Cpp17Test.cpp" "cpp/Cpp17AutoAllocTest.cpp" "cpp/Cpp20Test.cpp")
    messgen_add_types_library(msgs_test_types_cpp20 "${MESSGEN_TYPE_DIR}" "auto_alloc" "cpp_standard=20")
    messgen_add_proto_library(msgs_test_proto_cpp20 "${MESSGEN_PROTO_DIR}" "mynamespace/proto/test_proto" msgs_test_types_cpp20 "auto_alloc")
    messgen_add_proto_library(msgs_another_proto_cpp20 "${MESSGEN_PROTO_DIR}" "mynamespace/proto/subspace/another_proto" msgs_test_types_cpp20 "auto_alloc")
    target_link_libraries(test_cpp20 msgs_test_proto_cpp20 msgs_another_proto_cpp20 GTest::gtest_main)
    gtest_discover_tests(test_cpp20)

    add_executable(test_cpp20_custom_alloc "cpp/Cpp17Test.cpp" "cpp/Cpp17CustomAllocTest.cpp" "cpp/Cpp20CustomAllocTest.cpp")
    messgen_add_types_library(msgs_test_types_cpp20_custom_alloc "${MESSGEN_TYPE_DIR}" "custom_alloc" "cpp_standard=20")
    messgen_add_proto_library(msgs_test_proto_cpp20_custom_alloc "${MESSGEN_PROTO_DIR}" "mynamespace/proto/test_proto" msgs_test_types_cpp20_custom_alloc "custom_alloc")
    messgen_add_proto_library(msgs_another_proto_cpp20_custom_alloc "${MESSGEN_PROTO_DIR}" "mynamespace/proto/subspace/another_proto" msgs_test_types_cpp20_custom_alloc "custom_alloc")
    target_link_libraries(test_cpp20_custom_alloc msgs_test_proto_cpp20_custom_alloc msgs_another_proto_cpp20_custom_alloc GTest::gtest_main)
    gtest_discover_tests(test_cpp20_custom_alloc)

    # Only GCC supports has the support for ISO/IEC TR 24733
    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
        messgen_add_types_library(msgs_test_types_cpp20_decimal "${CMAKE_CURRENT_LIST_DIR}/msg/types_decimal" "auto_alloc" "cpp_standard=20")
        add_executable(test_cpp20_decimal "cpp/Cpp20DecimalTest.cpp")
        target_include_directories(test_cpp20_decimal PRIVATE ${CMAKE_SOURCE_DIR}/port/cpp_common)
        target_link_libraries(test_cpp20_decimal msgs_test_types_cpp20_decimal GTest::gtest_main)
        gtest_discover_tests(test_cpp20_decimal)
    endif()
endif ()

if (CMAKE_CXX_STANDARD GREATER_EQUAL 17)
    # Make executables form the same source files but without "cpp_standard=20" option (messgen may work differently)
    add_executable(test_cpp17 "cpp/Cpp17Test.cpp" "cpp/Cpp17AutoAllocTest.cpp")
    messgen_add_types_library(msgs_test_types_cpp17 "${MESSGEN_TYPE_DIR}" "auto_alloc" "cpp_standard=17")
    messgen_add_proto_library(msgs_test_proto_cpp17 "${MESSGEN_PROTO_DIR}" "mynamespace/proto/test_proto" msgs_test_types_cpp17 "auto_alloc" "cpp_standard=17")
    messgen_add_proto_library(msgs_another_proto_cpp17 "${MESSGEN_PROTO_DIR}" "mynamespace/proto/subspace/another_proto" msgs_test_types_cpp17 "auto_alloc" "cpp_standard=17")
    target_link_libraries(test_cpp17 msgs_test_proto_cpp17 msgs_another_proto_cpp17 GTest::gtest_main)
    gtest_discover_tests(test_cpp17)

    add_executable(test_cpp17_custom_alloc "cpp/Cpp17Test.cpp" "cpp/Cpp17CustomAllocTest.cpp")
    messgen_add_types_library(msgs_test_types_cpp17_custom_alloc "${MESSGEN_TYPE_DIR}" "custom_alloc" "cpp_standard=17")
    messgen_add_proto_library(msgs_test_proto_cpp17_custom_alloc "${MESSGEN_PROTO_DIR}" "mynamespace/proto/test_proto" msgs_test_types_cpp17_custom_alloc "custom_alloc" "cpp_standard=17")
    messgen_add_proto_library(msgs_another_proto_cpp17_custom_alloc "${MESSGEN_PROTO_DIR}" "mynamespace/proto/subspace/another_proto" msgs_test_types_cpp17_custom_alloc "custom_alloc" "cpp_standard=17")
    target_link_libraries(test_cpp17_custom_alloc msgs_test_proto_cpp17_custom_alloc msgs_another_proto_cpp17_custom_alloc GTest::gtest_main)
    gtest_discover_tests(test_cpp17_custom_alloc)

else()
    message(WARNING "C++ standard is less than 17, skipping C++ tests")

endif()
